@@ -4,8 +4,9 @@
 \usage{
 fscores(object, rotate = "", full.scores = FALSE, method = "EAP",
   quadpts = NULL, response.pattern = NULL, returnER = FALSE,
-  mean = NULL, cov = NULL, verbose = TRUE, scores.only = TRUE,
-  full.scores.SE = FALSE, theta_lim = c(-4, 4), MI = 0)
+  return.acov = FALSE, mean = NULL, cov = NULL, verbose = TRUE,
+  scores.only = TRUE, full.scores.SE = FALSE, theta_lim = c(-4, 4),
+  MI = 0)
 }
 \arguments{
   \item{object}{a computed model object of class
@@ -58,6 +59,10 @@ fscores(object, rotate = "", full.scores = FALSE, method = "EAP",
   \item{returnER}{logical; return empirical reliability
   (also known as marginal reliability) estimates as a
   numeric values?}
+
+  \item{return.acov}{logical; return a list containing
+  covariance matricies instead of factors scores?
+  \code{impute = TRUE} not supported with this option}
 
   \item{full.scores.SE}{logical; when \code{full.scores ==
   TRUE}, also return the standard errors associated with
